--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,23 +8,6 @@ body {
   font-family: "Assistant", sans-serif;
 }
 
-header {
-  background: white;
-  z-index: 10;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.05);
-  height: 65px;
-  padding: 10px;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  display: grid;
-  grid-template-columns: 1fr 3fr 1fr;
-}
-
 label {
   font-size: 16pt;
   font-weight: 600;
@@ -60,8 +43,50 @@ input.submit:focus {
   border-bottom: 2px white solid;
 }
 
-@media screen and (min-width: 700px) and (max-width: 1023px) {
-  header {
-    height: 50px;
+div {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+main {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  left: 20vw;
+  width: 80vw;
+  height: 100%;
+  overflow: auto;
+  padding: 85px 200px;
+  overflow: auto;
+}
+
+@media screen and (max-width: 1200px) {
+  main {
+    padding: 70px 50px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  label {
+    font-size: 14pt;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  input, textarea {
+    font-size: 12pt;
+  }
+  main {
+    width: 100vw;
+    left: 0;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  main {
+    padding: 70px 20px;
   }
 }
